Fix Gap Answer Input styling

--- a/web/static/css/perform-test.sass
+++ b/web/static/css/perform-test.sass
@@ -50,3 +50,7 @@
 
 .slickRight
   right: -25px
+
+.gapAnswerInput
+  display: block
+  margin: 0 auto
